Make params.php installation neutral; move installation-specific parameters to ../config/server_config.php

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
   <head>
-    <title>NSR API</title>
+    <title>NSR Development API (orig)</title>
   </head>
   <body>
 
-    <h1>NSR API (Development)</h1>
-    <p>The NSR API is online</p>
+    <h1>NSR Development API (orig)</h1>
+    <p>The original NSR Development API is online</p>
+     <p>Location: /home/boyle/nsr/src</p>
   </body>
 </html>
