Update README: remove simple api

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
-  <head>
-    <title>NSR Development API (orig)</title>
-  </head>
-  <body>
-
-    <h1>NSR Development API (orig)</h1>
-    <p>The original NSR Development API is online</p>
-     <p>Location: /home/boyle/nsr/src</p>
-  </body>
+    <head>
+        <title>NSR Development API</title>
+    </head>
+    <body>
+        <h1>NSR Development API</h1>
+		<p>The NSR Development API is online!</p>
+		<!--<p>Server: nimoy</p>-->
+		<!--<p>Location: /home/boyle/nsr/src</p>-->
+    </body>
 </html>
+
